more axe contrast fixes

--- a/scss/styles.scss
+++ b/scss/styles.scss
@@ -275,6 +275,9 @@ footer {
             color: $base-color;
         }
     }
+    .fa {
+        color: $text;
+    }
 }
 
 .btn-rounded-white {
@@ -498,7 +501,7 @@ footer {
     h4 {
         font-size: 1.2em;
         font-weight: 300;
-        color: #7e8890;
+        color: $text;
         margin: 0 0 15px 0;
     }
     p {
